2006-02-22 Erik Sandberg  <mandolaerik@gmail.com>

	* input/regression/: upgraded syntax for some files.

	* THANKS: Add bughunters.

2006-02-22  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ invoking.itely, advanced-notation.itely,
	global.itely: long-awaited "let's make chapter 10 not suck"
	update.  Rearrange chapter 10; now called "global issues",
	addresses file structure, etc.  Some info from other files
	moved into global.itely.

2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (acknowledge_rhythmic_head): also
	catch trill-span-event notes.

	* Documentation/user/examples.itely (Ancient notation templates): typo.
	(Jazz combo): typo.

	* scripts/lilypond-book.py (main): scrap invokes_lilypond(). 

	* Documentation/user/basic-notation.itely (Ties): document \repeatTie.

	* Documentation/topdocs/NEWS.tely (Top): document \repeatTie.

	* scm/define-music-types.scm (music-descriptions): add RepeatTieEvent

	* lily/repeat-tie-engraver.cc (acknowledge_note_head): new file. cut & paste
	froum Laissez_vibrer_engraver.

	* ly/declarations-init.ly (repeatTie): add \repeatTie

	* scm/define-grobs.scm (all-grob-descriptions): add RepeatTie, RepeatTieColumn

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	head-direction property.

	* lily/tie-formatting-problem.cc (from_semi_ties): rename from
	from_lv_ties. Take head direction argument.

	* lily/semi-tie-column.cc: rename from
	laissez-vibrer-tie-column.cc. Rename class too.

	* lily/semi-tie.cc: rename from laissez-vibrer-tie.cc. Rename
	class too.

	* lily/paper-score.cc (find_break_indices): move from Break_algorithm.

	* lily/break-algorithm.cc (find_break_indices): remove linewidth <
	0 case.
	(find_breaks): idem.

2006-02-21  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: fixed make-moment]
	example.

	* Documentation/user/basic-notation.itely: more clarification to
	transpose.
